# AdderNet

./: CLAUDE.md  KAGGLE_SETUP.md  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py  test_attention.py  test_validation.py
addernet/: __init__.py  addernet_hdc.py  attention.py  build_ext_2026.py  cuda_detector.py
addernet/src/: addernet.c  addernet.h  addernet_cuda.cu  addernet_hdc.h  addernet_hdc_train_cuda.cu  hdc_core.c  hdc_cuda_batch.c  hdc_lsh.c  hdc_lsh.h
addernet/src/cuda_train/: addernet_hdc_train_cuda_2026.cu
docs/specs/: 2025-04-06-addernet-cuda-2026-modernization.md  2025-04-06-implementation-summary.md
python/: addernet_hdc.py
src/: addernet_cuda.cu  addernet_hdc.c  addernet_hdc_train_cuda.cu  hdc_core.h
src/cuda_train/: addernet_hdc_train_cuda_2026.cu
tests/: test_cuda_2026.py
